--- a/app/views/book/index.html.erb
+++ b/app/views/book/index.html.erb
@@ -11,13 +11,14 @@
     <div class="container-sm mt-5">
       <h1>Daftar Buku</h1>
 
+      <a href="/book/new" class="btn btn-primary">Tambah</a>
       <table class="table">
         <thead>
           <tr>
             <th scope="col">#</th>
-            <th scope="col">Judul</th>
-            <th scope="col">Tahun</th>
-            <th scope="col">Aksi</th>
+            <th scope="col">Title</th>
+            <th scope="col">Year</th>
+            <th scope="col">Author</th>
           </tr>
         </thead>
         <tbody>
@@ -26,7 +27,7 @@
             <th scope="row"> <%= i + 1 %></th>
             <td><%= b.title %></td>
             <td><%= b.year %></td>
-            <td>@mdo</td>
+            <td><%= b.author.name %></td>
           </tr>
         <% end %>
           
