--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,30 +9,22 @@
   </head>
   <body>
     <div class="container-sm mt-5">
-      <h1>Book List</h1>
+      <% if user_signed_in? %>
+      <h1>Hello, <%= current_user.username %></h1>
+      <%= button_to "log out", destroy_user_session_path, method: :delete, class: "btn btn-danger" %>
+      <% else %>
+      <h1>Hello</h1>
+      <a class="btn btn-success" href="/users/sign_in">Login</a>
+      <% end %>
+      <p class="notice"><%= notice %></p>
+      <p class="alert"><%= alert %></p>
 
-      <a href="/book/new" class="btn btn-primary">Add</a>
-      <table class="table">
-        <thead>
-          <tr>
-            <th scope="col">#</th>
-            <th scope="col">Title</th>
-            <th scope="col">Year</th>
-            <th scope="col">Author</th>
-          </tr>
-        </thead>
-        <tbody>
-        <% @books.each_with_index do |b, i| %>
-          <tr>
-            <th scope="row"> <%= i + 1 %></th>
-            <td><%= b.title %></td>
-            <td><%= b.year %></td>
-            <td><%= b.author.name %></td>
-          </tr>
-        <% end %>
-          
-        </tbody>
-      </table>
+      <h2>Menu</h2>
+      <ul>
+        <li>
+          <a href="/book">Book List</a>
+        </li>
+      </ul>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
   </body>
