--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -24,6 +24,12 @@
         <li>
           <a href="/book">Book List</a>
         </li>
+        <li>
+          <a href="/book/api/v1/book">Book API</a>
+        </li>
+       <li>
+          <a href="/author/api/v1/author">Author API</a>
+        </li>
       </ul>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
