--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Homepage</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
   </head>
   <body>
@@ -15,11 +15,12 @@
       <% else %>
       <h1>Hello</h1>
       <a class="btn btn-success" href="/users/sign_in">Login</a>
+       <a class="btn btn-primary" href="/users/sign_up">Register</a>
       <% end %>
       <p class="notice"><%= notice %></p>
       <p class="alert"><%= alert %></p>
 
-      <h2>Menu</h2>
+      <h3>Menu</h3>
       <ul>
         <li>
           <a href="/book">Book List</a>
